objects/ASI_CRM_SG_SO_FOC_Rules__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Applicable_To__c</fullName>
        <label>Applicable To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Buy__c</fullName>
        <label>Buy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Get_Free_Bottle__c</fullName>
        <label>Get Free (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_CRM_SG_Wholesaler</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG SO FOC Rule - Wholesaler</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>SO FOC Rules</relationshipLabel>
        <relationshipName>ASI_CRM_SG_SO_FOC_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_First_5_Digits__c</fullName>
        <label>SKU (First 5 Digits)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SO FOC Rule</label>
    <listViews>
        <fullName>All_SG_Wholesaler</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Wholesaler__c</columns>
        <columns>ASI_CRM_SG_Buy__c</columns>
        <columns>ASI_CRM_SG_Get_Free_Bottle__c</columns>
        <columns>ASI_CRM_SKU_First_5_Digits__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SG_SO_FOC_Rules__c.ASI_CRM_SG_SO_FOC_Rule_Wholesaler</value>
        </filters>
        <label>All SG Wholesaler</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_SG_Finance_Maintain_Master_Data</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Rule-{000000}</displayFormat>
        <label>SO FOC Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO FOC Rules</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_SO_FOC_Rule_Wholesaler</fullName>
        <active>true</active>
        <label>ASI CRM SG SO FOC Rule - Wholesaler</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>